--- a/StockInventoryManagement/StockInventoryManagement/StockInventoryManagement.csproj
+++ b/StockInventoryManagement/StockInventoryManagement/StockInventoryManagement.csproj
@@ -140,6 +140,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="lib\ObjectListView.dll" />
+    <Content Include="lib\System.Data.SQLite.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
