--- a/StockInventoryManagement/StockInventoryManagement/app.config
+++ b/StockInventoryManagement/StockInventoryManagement/app.config
@@ -1,3 +1,24 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="StockInventoryManagement.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
+        <StockInventoryManagement.Properties.Settings>
+            <setting name="appOwner" serializeAs="String">
+                <value>Patel Auto Technologies</value>
+            </setting>
+            <setting name="appVersion" serializeAs="String">
+                <value>1.0</value>
+            </setting>
+            <setting name="appUID" serializeAs="String">
+                <value>wcodez.stock-inventory-management</value>
+            </setting>
+            <setting name="appSettingVAT" serializeAs="String">
+                <value>18</value>
+            </setting>
+        </StockInventoryManagement.Properties.Settings>
+    </userSettings>
+</configuration>
