Date Selection in Transaction page

--- a/StockInventoryManagement/StockInventoryManagement/Properties/Settings.settings
+++ b/StockInventoryManagement/StockInventoryManagement/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="appOwner" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Patel Auto Technologies</Value>
+      <Value Profile="(Default)">Patel Auto Technology</Value>
     </Setting>
     <Setting Name="appVersion" Type="System.String" Scope="User">
       <Value Profile="(Default)">1.0</Value>
