--- a/StockInventoryManagement/StockInventoryManagement/app.config
+++ b/StockInventoryManagement/StockInventoryManagement/app.config
@@ -8,7 +8,7 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
         <StockInventoryManagement.Properties.Settings>
             <setting name="appOwner" serializeAs="String">
-                <value>Patel Auto Technologies</value>
+                <value>Patel Auto Technology</value>
             </setting>
             <setting name="appVersion" serializeAs="String">
                 <value>1.0</value>
